# stock_bot

./: .gitignore  holidays.csv  portfolio.csv  portfolio_history.db  pyproject.toml  requirements.txt  stock_bot.py
.github/workflows/: daily_stock.yml
