[project]
name = "stock-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.24.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "defusedxml==0.7.1",
    "fonttools==4.61.1",
    "fpdf2==2.8.5",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "magic-filter==1.0.12",
    "matplotlib==3.10.8",
    "multidict==6.7.1",
    "multitasking==0.0.12",
    "numpy==2.4.1",
    "open-tamil==1.1",
    "packaging==26.0",
    "pandas==3.0.0",
    "peewee==3.19.0",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "tamil==0.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "websockets==16.0",
    "whatsapp-api-client-python==0.0.53",
    "yarl==1.22.0",
    "yfinance==1.1.0",
]
